--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.application.name=Banking-App
+#spring.application.name=Banking-App
 
-spring.datasource.url=jdbc:mysql://localhost:3306/banking_app?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.driver.class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/banking_app?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.driver.class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/banking_app
+spring.datasource.username=postgres
+spring.datasource.password=and171521
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
